Revert "fix(*): hide scrollbar"
This reverts commit 42ff91e8f5b0c3a807b0b93fcf680d1a82a5aefc.

--- a/src/app/(main)/layout-styles.module.scss
+++ b/src/app/(main)/layout-styles.module.scss
@@ -28,15 +28,12 @@
     height: calc(100% - 24px);
 
     & > :first-child {
-        overflow-y: scroll;
+        overflow: scroll;
         height: calc(100% - 80px - 12px);
         border-radius: 12px;
         background: #000;
         padding: 16px 8px;
         margin-bottom: 12px;
-
-        -ms-overflow-style: none;
-         scrollbar-width: none;
 
         
         @media screen and (max-width: 700px) {
